# slacking

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
examples/: 00-showcase.cpp  01-basic.cpp  02-basic.cpp  03-attachments.cpp  03-users.cpp  04-users.cpp  05-channels.cpp  06-custom_post_get.cpp  07-webhook.cpp  CMakeLists.txt
include/slacking/: json.hpp  slacking.hpp
include/slacking/cpr/: auth.h  cookies.h  cpr.h  cprtypes.h  digest.h  error.h  multipart.h  parameters.h  payload.h  proxies.h  session.h  util.h
include/slacking/json/: json.hpp
